@@ -4,6 +4,7 @@ ChangeLog
 
 current: quickly-0.0.7
 
+- added quickly.numbering module
 - added dom.read module to construct elements/documents from text
 - removed some temp methods from dom.util
 - Element.copy_with_origin now works properly everywhere
